--- a/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/admin/configuration.xhtml
+++ b/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/admin/configuration.xhtml
@@ -4,9 +4,10 @@
 	xmlns:h="http://java.sun.com/jsf/html">
 <body>
 	<ui:composition template="/WEB-INF/template.xhtml">
+		<ui:param name="activeMenu" value="main" />
 		<ui:define name="body">
-			<h2>Welcome</h2>
-			<p>Welcome to the eID enabled admin portal.</p>
+			<h2>Configuration</h2>
+			<p>Configure the web application via this page.</p>
 		</ui:define>
 	</ui:composition>
 </body>
