--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/error.xhtml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/error.xhtml
@@ -3,11 +3,12 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html">
 <body>
-	<ui:composition template="/WEB-INF/template.xhtml">
-		<ui:define name="body">
-			<h2>Welcome</h2>
-			<p>Welcome to the eID enabled admin portal.</p>
-		</ui:define>
-	</ui:composition>
+<ui:composition template="/WEB-INF/template.xhtml">
+	<ui:define name="body">
+		<h2>Error</h2>
+		<p>You are not authorized for this operation.</p>
+		<p>Your eID has been registered as pending administrator.</p>
+	</ui:define>
+</ui:composition>
 </body>
 </html>
