refactored java package for JPA entities

--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
@@ -28,8 +28,8 @@
 	<f:view>
 		<div id="menu">
 			<rich:panelMenu>
-				<rich:panelMenuItem label="Configuration" />
-				<rich:panelMenuItem label="Privileges" />
+				<rich:panelMenuItem label="Configuration" action="/admin/configuration.xhtml" />
+				<rich:panelMenuItem label="Privileges" action="/admin/privileges.xhtml" />
 			</rich:panelMenu>
 		</div>
 
