--- a/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
+++ b/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
@@ -11,9 +11,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta http-equiv="Content-Script-Type" content="text/javascript" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
-<meta http-equiv="expires" content="0" />
-<meta http-equiv="cache-control" content="no-cache, no-store" />
-<meta http-equiv="pragma" content="no-cache" />
+<meta http-equiv="Expires" content="-1" />
+<meta http-equiv="Cache-Control" content="no-cache, no-store, max-age=0, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
 <title>Admin Portal</title>
 <link rel="stylesheet" type="text/css"
 	href="#{facesContext.externalContext.requestContextPath}/style.css" />
@@ -27,10 +27,12 @@
 
 	<f:view>
 		<div id="menu">
-			<rich:panelMenu>
-				<rich:panelMenuItem label="Configuration" action="/admin/configuration.xhtml" />
-				<rich:panelMenuItem label="Privileges" action="/admin/privileges.xhtml" />
-			</rich:panelMenu>
+			<h:form>
+				<rich:panelMenu>
+					<rich:panelMenuItem label="Configuration" action="/admin/configuration.xhtml" />
+					<rich:panelMenuItem label="Privileges" action="/admin/privileges.xhtml" />
+				</rich:panelMenu>
+			</h:form>
 		</div>
 
 		<div id="login">
@@ -47,8 +49,7 @@
 						</h:panelGrid>
 					</h:panelGroup>
 				</h:panelGrid>
-				<s:button value="Logout" view="/main.xhtml"
-					action="#{identity.logout()}" />
+				<s:button value="Logout" action="#{identity.logout()}" />
 			</s:div>
 		</div>
 
