--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/src/main/webapp/WEB-INF/template.xhtml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/src/main/webapp/WEB-INF/template.xhtml
@@ -29,7 +29,7 @@
 		<div id="menu">
 			<div id="menuPanel">
 				<h:form>
-					<rich:panelMenu>
+					<rich:panelMenu value="#{${control-seam-components-prefix}MenuController.selectedChild}">
 						<rich:panelMenuItem label="My Page" action="/user/main.xhtml" />
 					</rich:panelMenu>
 				</h:form>
