--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
@@ -29,7 +29,7 @@
 		<div id="menu">
 			<div id="menuPanel">
 				<h:form>
-					<rich:panelMenu>
+					<rich:panelMenu value="#{${admin-control-seam-components-prefix}MenuController.selectedChild}">
 						<rich:panelMenuItem label="Configuration" action="/admin/configuration.xhtml" />
 						<rich:panelMenuItem label="Privileges" action="/admin/privileges.xhtml" />
 					</rich:panelMenu>
