--- a/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/src/main/webapp/main.xhtml
+++ b/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/src/main/webapp/main.xhtml
@@ -5,8 +5,8 @@
 <body>
 	<ui:composition template="/WEB-INF/template.xhtml">
 		<ui:define name="body">
-			<h2>Welcome</h2>
-			<p>Welcome to the eID enabled Portal.</p>
+			<h2>#{messages['welcome']}</h2>
+			<p>#{messages['welcomeMsg']}</p>
 		</ui:define>
 	</ui:composition>
 </body>
