--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/src/main/webapp/user/main.xhtml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/src/main/webapp/user/main.xhtml
@@ -5,8 +5,8 @@
 <body>
 	<ui:composition template="/WEB-INF/template.xhtml">
 		<ui:define name="body">
-			<h2>My Page</h2>
-			<p>Welcome to the protected user section.</p>
+			<h2>#{messages['myPage']}</h2>
+			<p>#{messages['myPageMsg']}</p>
 		</ui:define>
 	</ui:composition>
 </body>
