IdP issuer name configuration

--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/admin/configuration.xhtml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/admin/configuration.xhtml
@@ -17,6 +17,11 @@
 								value="#{${admin-control-seam-components-prefix}Config.idpUrl}"
 								size="50" />
 
+							<h:outputText value="Issuer name:" />
+							<h:inputText
+								value="#{${admin-control-seam-components-prefix}Config.idpIssuerName}"
+								size="50" />
+
 							<h:outputText value="Service fingerprint:" />
 							<h:inputText
 								value="#{${admin-control-seam-components-prefix}Config.idpFingerprint}"
