--- a/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/src/main/webapp/WEB-INF/template.xhtml
+++ b/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/src/main/webapp/WEB-INF/template.xhtml
@@ -38,6 +38,7 @@
 			<div id="menuPanel">
 				<h:form>
 					<rich:panelMenu value="#{${control-seam-components-prefix}MenuController.selectedChild}">
+						<rich:panelMenuItem label="#{messages['home']}" action="/main.xhtml" />
 						<rich:panelMenuItem label="#{messages['myPage']}" action="/user/main.xhtml" />
 					</rich:panelMenu>
 				</h:form>
