JavaEE6: admin WAR refactoring

--- a/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
+++ b/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -5,40 +6,43 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:rich="http://richfaces.org/rich">
 
-<h:head>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<meta http-equiv="Content-Script-Type" content="text/javascript" />
-	<meta http-equiv="Content-Style-Type" content="text/css" />
-	<meta http-equiv="Expires" content="-1" />
-	<meta http-equiv="Cache-Control" content="no-cache, no-store, max-age=0, must-revalidate" />
-	<meta http-equiv="Pragma" content="no-cache" />
-	<title>${application-title} Admin Portal</title>
-	<link rel="stylesheet" type="text/css"
-		href="#{facesContext.externalContext.requestContextPath}/style.css" />
-</h:head>
+<f:view>
+	<h:head>
+		<meta http-equiv="Content-Type"
+			content="text/html; charset=iso-8859-1" />
+		<meta http-equiv="Content-Script-Type" content="text/javascript" />
+		<meta http-equiv="Content-Style-Type" content="text/css" />
+		<meta http-equiv="Expires" content="-1" />
+		<meta http-equiv="Cache-Control"
+			content="no-cache, no-store, max-age=0, must-revalidate" />
+		<meta http-equiv="Pragma" content="no-cache" />
+		<link rel="stylesheet" type="text/css"
+			href="#{facesContext.externalContext.requestContextPath}/style.css" />
+		<title>${application-title} Admin Portal</title>
+	</h:head>
 
-<body>
+	<h:body>
 
-	<div id="header">
-		<h1>${application-title} Admin Portal</h1>
-	</div>
+		<div id="header">
+			<h1>${application-title} Admin Portal</h1>
+		</div>
 
-	<f:view>
 		<div id="menu">
 			<div id="menuPanel">
 				<h:form>
-					<rich:panelMenu selectedChild="#{${admin-control-cdi-components-prefix}MenuController.selectedChild}">
-						<rich:panelMenuItem label="Configuration" action="/admin/configuration.xhtml" />
-						<rich:panelMenuItem label="Privileges" action="/admin/privileges.xhtml" />
+					<rich:panelMenu
+						selectedChild="#{${admin-control-cdi-components-prefix}MenuController.selectedChild}">
+						<rich:panelMenuItem label="Configuration"
+							action="/admin/configuration.xhtml" />
+						<rich:panelMenuItem label="Privileges"
+							action="/admin/privileges.xhtml" />
 					</rich:panelMenu>
 				</h:form>
 			</div>
 		</div>
 
 		<div id="login">
-			<div id="loginPanel">
-				Login comes here
-			</div>
+			<div id="loginPanel">Login comes here</div>
 		</div>
 
 		<div id="content">
@@ -46,7 +50,8 @@
 				<p>Default Body</p>
 			</ui:insert>
 		</div>
-	</f:view>
 
-</body>
+	</h:body>
+
+</f:view>
 </html>
