--- a/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/login.xhtml
+++ b/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/login.xhtml
@@ -17,7 +17,7 @@
 				height : 300
 			};
 			var parameters = {
-				TargetPage : 'postLogin.jsf?conversationId=#{conversation.id}',
+				TargetPage : 'postLogin.jsf',
 				AppletService : 'applet-service-authentication'
 			};
 			var version = '1.6';
