--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/admin/privileges.xhtml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/admin/privileges.xhtml
@@ -9,6 +9,54 @@
 	<ui:define name="body">
 		<h2>Privileges</h2>
 		<p>Configure the administrator privileges via this page.</p>
+		<h:form>
+			<rich:extendedDataTable var="row" value="#{${admin-control-cdi-components-prefix}AdminList}"
+				binding="#{${admin-control-cdi-components-prefix}PrivilegesController.dataTable}" rows="10">
+				<rich:column>
+					<f:facet name="header">
+						<h:outputText value="Name" />
+					</f:facet>
+					<h:outputText value="#{row.name}" />
+				</rich:column>
+				<rich:column>
+					<f:facet name="header">
+						<h:outputText value="Card Number" />
+					</f:facet>
+					<h:outputText value="#{row.cardNumber}" />
+				</rich:column>
+				<rich:column>
+					<f:facet name="header">
+						<h:outputText value="Pending" />
+					</f:facet>
+					<h:outputText value="#{row.pending}" />
+				</rich:column>
+				<rich:column>
+					<f:facet name="header">
+						<h:outputText value="Actions" />
+					</f:facet>
+					<h:commandLink value="Delete"
+						action="#{${admin-control-cdi-components-prefix}PrivilegesController.delete}"
+						onclick="return askDeleteQuestion()" />
+					<h:outputText value=" " />
+					<h:commandLink value="Approve"
+						action="#{${admin-control-cdi-components-prefix}PrivilegesController.approve}"
+						rendered="#{row.pending}" />
+				</rich:column>
+				<f:facet name="footer">
+					<rich:dataScroller />
+				</f:facet>
+			</rich:extendedDataTable>
+			<script type="text/javascript">
+				function askDeleteQuestion() {
+					var agree = confirm("Remove Administrator?");
+					if (agree) {
+						return true;
+					} else {
+						return false;
+					}
+				}
+        	</script>
+		</h:form>
 	</ui:define>
 </ui:composition>
 </html>
