--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
@@ -54,6 +54,8 @@
 		</div>
 
 		<div id="content">
+			<h2><ui:insert name="title">Default Title</ui:insert></h2>
+			<rich:messages globalOnly="true" />
 			<ui:insert name="body">
 				<p>Default Body</p>
 			</ui:insert>
