--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/admin/configuration.xhtml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/admin/configuration.xhtml
@@ -5,8 +5,8 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:rich="http://richfaces.org/rich">
 <ui:composition template="/WEB-INF/template.xhtml">
+	<ui:define name="title">Configuration</ui:define>
 	<ui:define name="body">
-		<h2>Configuration</h2>
 		<p>Configure the web application via this page.</p>
 		<h:form>
 			<rich:tabPanel switchType="client">
