--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/denied.xhtml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/denied.xhtml
@@ -4,8 +4,8 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html">
 <ui:composition template="/WEB-INF/template.xhtml">
+	<ui:define name="title">Access Denied</ui:define>
 	<ui:define name="body">
-		<h2>Access Denied</h2>
 	</ui:define>
 </ui:composition>
 </html>
