--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/index.xhtml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/index.xhtml
@@ -4,8 +4,8 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html">
 <ui:composition template="/WEB-INF/template.xhtml">
+	<ui:define name="title">Welcome</ui:define>
 	<ui:define name="body">
-		<h2>Welcome</h2>
 		<p>Welcome to the eID enabled admin portal.</p>
 	</ui:define>
 </ui:composition>
