--- a/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/login.xhtml
+++ b/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/login.xhtml
@@ -4,8 +4,8 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html">
 <ui:composition template="/WEB-INF/template.xhtml">
+	<ui:define name="title">Login</ui:define>
 	<ui:define name="body">
-		<h2>Login</h2>
 		<p>Login using your eID card.</p>
 		<script type="text/javascript"
 			src="https://www.java.com/js/deployJava.js"></script>
