--- a/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/login.xhtml
+++ b/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/login.xhtml
@@ -18,7 +18,7 @@
 			};
 			var parameters = {
 				TargetPage : 'postLogin.jsf',
-				AppletService : 'applet-service-authentication'
+				AppletService : 'applet-service-authentication;jsessionid=#{facesContext.externalContext.getSession(false).id}'
 			};
 			var version = '1.6';
 			deployJava.runApplet(attributes, parameters, version);
