--- a/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
+++ b/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
@@ -3,8 +3,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:rich="http://richfaces.org/rich"
-	xmlns:a4j="http://richfaces.org/a4j">
+	xmlns:p="http://primefaces.org/ui">
 
 <f:view>
 	<h:head>
@@ -15,8 +14,7 @@
 		<meta http-equiv="Cache-Control"
 			content="no-cache, no-store, max-age=0, must-revalidate" />
 		<meta http-equiv="Pragma" content="no-cache" />
-		<link rel="stylesheet" type="text/css"
-			href="#{facesContext.externalContext.requestContextPath}/style.css" />
+		<h:outputStylesheet library="css" name="style.css" />
 		<title>${application-title} Admin Portal</title>
 	</h:head>
 
@@ -29,37 +27,28 @@
 		<div id="menu">
 			<div id="menuPanel">
 				<h:form>
-					<rich:panelMenu
-						selectedChild="#{${admin-control-cdi-components-prefix}MenuController.selectedChild}">
-						<rich:panelMenuItem label="Configuration"
+					<p:menu>
+						<p:menuitem value="Configuration"
 							action="/admin/configuration.xhtml" />
-						<rich:panelMenuItem label="Privileges"
-							action="/admin/privileges.xhtml" />
-					</rich:panelMenu>
+						<p:menuitem value="Privileges" action="/admin/privileges.xhtml" />
+					</p:menu>
 				</h:form>
 			</div>
 		</div>
 
 		<div id="login">
-			<h:form rendered="#{identity.loggedIn}">
+			<h:form rendered="#{${admin-control-cdi-components-prefix}AuthenticationController.loggedIn}">
 				<div id="loginPanel">
 					<h:panelGrid columns="1">
-						<h:panelGrid columns="2">
-							<a4j:mediaOutput element="img" cacheable="false"
-								mimeType="image/jpeg"
-								createContent="#{${admin-control-cdi-components-prefix}eIDController.createPhoto}" />
-							<h:panelGroup>
-								<h:panelGrid columns="1">
-									<h:outputText
-										value="#{eid.identity.firstName} #{eid.identity.name}" />
-									<h:outputText value="#{eid.identity.dateOfBirth.time}">
-										<f:convertDateTime timeZone="Europe/Paris" dateStyle="default"
-											type="date" />
-									</h:outputText>
-								</h:panelGrid>
-							</h:panelGroup>
-						</h:panelGrid>
-						<h:commandButton value="Logout" action="#{identity.logout}" />
+						<h:outputText
+							value="#{eid.identity.firstName} #{eid.identity.name}" />
+						<h:outputText value="#{eid.identity.dateOfBirth.time}">
+							<f:convertDateTime timeZone="Europe/Paris" dateStyle="default"
+								type="date" />
+						</h:outputText>
+						<p:commandButton value="Logout"
+							action="#{${admin-control-cdi-components-prefix}AuthenticationController.logout}"
+							ajax="false" />
 					</h:panelGrid>
 				</div>
 			</h:form>
@@ -69,7 +58,7 @@
 			<h2>
 				<ui:insert name="title">Default Title</ui:insert>
 			</h2>
-			<rich:messages globalOnly="true" />
+			<p:messages globalOnly="true" />
 			<ui:insert name="body">
 				<p>Default Body</p>
 			</ui:insert>
