improved privileges user interaction

--- a/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
+++ b/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/template.xhtml
@@ -58,7 +58,7 @@
 			<h2>
 				<ui:insert name="title">Default Title</ui:insert>
 			</h2>
-			<p:messages globalOnly="true" />
+			<p:messages id="messages" globalOnly="true" />
 			<ui:insert name="body">
 				<p>Default Body</p>
 			</ui:insert>
